[package]
name = "zenlink-dex"
version = "0.1.0"
authors = ["Zenlink Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
orml-traits = { version = "0.3.2", default-features = false }
orml-tokens = { version = "0.3.2", default-features = false }
orml-utilities = { version = "0.3.2", default-features = false }
support = { package = "zenlink-support", path = "../support", default-features = false }
primitives = { package = "zenlink-primitives", path = "../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
orml-currencies = { version = "0.3.2", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "orml-traits/std",
    "orml-tokens/std",
    "orml-utilities/std",
    "support/std",
    "primitives/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]